[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3graph"
dynamic = ["version"]
authors = [{ name = "Michael Wolf", email = "michael@mictronics.de" },]
description = "Python package to visualize the Meshtastic network based on d3js. Based on d3graph."
readme = "README.md"
requires-python = ">=3"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["Python", "Meshtastic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'pandas',
    'numpy',
    'colourmap',
    'networkx>2',
    'ismember',
    'jinja2',
    'packaging',
    'python-louvain',
    'datazets',
    ]

[project.urls]
Homepage = "https://www.mictronics.de"
Download = "https://github.com/Mictronics/d3mesh/archive/{version}.tar.gz"
Bayern-Mesh = "https://www.mictronics.de/bayern-mesh"

[tool.setuptools]
packages = ["d3graph"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "d3graph.__version__" }
